update mongo db and swagger
